force-app/main/default/src/objects/MVN_Program_Event__mdt/MVN_Program_Event__mdt.object-meta.xml
<CustomObject>
    <description>Maps activity and problem statuses to creation of program events. Match made on combo of object, status, program problem or program case developer name</description>
    <label>Program Event</label>
    <pluralLabel>Program_Events</pluralLabel>
</CustomObject>