force-app/main/default/src/objects/MVN_Program_Event__mdt/fields/MVN_Program_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Developer_Name__c</fullName>
    <description>The developer name to reference, either Care Plan Problem developer name or Activity developer anem</description>
    <label>Program Developer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>