force-app/main/default/src/objects/MVN_Program_Event__mdt/fields/MVN_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Record_Status__c</fullName>
    <description>The status of the record to check for.</description>
    <label>Record Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>