force-app/main/default/src/objects/MVN_Program_Event__mdt/fields/MVN_SObject__c.field-meta.xml
<CustomField>
    <fullName>MVN_SObject__c</fullName>
    <description>The SObject this configuration is for</description>
    <label>SObject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HealthCloudGA__CarePlanProblem__c</fullName>
                <label>Care Plan Problem</label>
            </value>
            <value>
                <fullName>Case</fullName>
                <label>Activity</label>
            </value>
            <value>
                <fullName>PJN_Fulfillment_Request__c</fullName>
                <label>Fulfillment Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>