force-app/main/default/src/objects/MVN_Program_Event__mdt/fields/MVN_Therapy_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Therapy_Status__c</fullName>
    <description>The status to set on the new event</description>
    <label>Therapy Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>