force-app/main/default/src/objects/MVN_Program_Event__mdt/fields/MVN_Therapy_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Therapy_Sub_Status__c</fullName>
    <description>The sub-status to set on the new event</description>
    <label>Therapy Sub-Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>