force-app/main/default/src/objects/MVN_Program_Event__mdt/fields/MVN_Use_Care_Plan_current_Therapy_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Use_Care_Plan_current_Therapy_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the current therapy status on the care plan will be set to the new therapy status on the event</description>
    <inlineHelpText>If checked the current therapy status on the care plan will be set to the new therapy status on the event</inlineHelpText>
    <label>Use Care Plan&apos;s current Therapy Status</label>
    <type>Checkbox</type>
</CustomField>