force-app/main/default/src/objects/MVN_Program_Event__mdt/listViews/MVN_All_Program_Events.listView-meta.xml
<ListView>
    <fullName>MVN_All_Program_Events</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>MVN_SObject__c</columns>
    <columns>MVN_Program_Developer_Name__c</columns>
    <columns>MVN_Record_Status__c</columns>
    <columns>MVN_Therapy_Status__c</columns>
    <columns>MVN_Use_Care_Plan_current_Therapy_Status__c</columns>
    <columns>MVN_Therapy_Sub_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Program Events</label>
    <language>en_US</language>
</ListView>